# connect-server

./: .env  .gitignore  .surrealdb  Cargo.toml  Dockerfile  inmemorydb.sh
migrations/: 20240424_195956_users_table.surql  20240425_063120_add_timestamps_users.surql  20240608_152605_insert_interests_data_en.surql  20240608_155942_insert_goals_data_en.surql  20240622_214416_add_i18n_init_data.surql  U1__create_user_table_with_id.sql
migrations/definitions/: 20240424_195956_users_table.json  20240608_152605_insert_interests_data.json  20240608_155942_insert_goals_data_en.json  _initial.json
migrations/down/: 20240622_214416_add_i18n_init_data.surql
schemas/: chat_edge.surql  chat_message.surql  chat_message_user_edge.surql  chat_messages.surql  chats.surql  goal.surql  goals.surql  goals_relations.surql  i18n_alcohol.surql  i18n_education.surql  i18n_goal.surql  i18n_interest.surql  i18n_language.surql  i18n_political.surql  i18n_religion.surql  i18n_zodiac.surql  image.surql  interest.surql  interests_relations.surql  match.surql  matches.surql  message.surql  user.surql  user_edge.surql  user_image.surql  user_images.surql  users.surql  users_relations.surql
src/: enums.rs  graphql.rs  main.rs  models.rs  surreal.rs
src/graphql/: mod.rs  mutations.rs  queries.rs  subscriptions.rs  types.rs
src/graphql/mutations/: chats.rs  goals.rs  interests.rs  messages.rs  user_images.rs  users.rs
src/graphql/queries/: ai.rs  chats.rs  goals.rs  i18n.rs  interests.rs  messages.rs  users.rs
src/graphql/subscriptions/: messages.rs  users.rs
src/graphql/types/: mod.rs  surreal_datetime.rs  surreal_id.rs  surreal_point.rs  timestamptz.rs
src/models/: ai.rs  chat.rs  chats.rs  edge.rs  goals.rs  i18n.rs  interests.rs  match.rs  messages.rs  mod.rs  users.rs
