[package]
name = "connect-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
dotenvy = "0.15.7"
firebase-auth = { version = "0.4.2", features = ["axum"] }
futures = "0.3.30"
redis = { version = "0.25.2", features = ["tokio-comp", "tokio-rustls-comp", "aio"] }
redis-derive = "0.1.7"
serde = "1.0.197"
serde_json = "1.0.115"
surrealdb = "1.4.2"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

