[package]
name = "connect-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-graphql = { version = "7.0.3", features = ["log"] }
async-graphql-axum = "7.0.5"
async-openai = "0.23.1"
async-stream = "0.3.5"
axum = { version = "0.7.5", default-features = true, features = ["ws"] }
axum-auth = "0.7.0"
chrono = { version = "0.4.37", features = ["serde"] }
dotenvy = "0.15.7"
firebase-auth = { version = "0.4.3", features = ["axum"] }
futures = "0.3.30"
geo-types = "0.7.13"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
redis = { version = "0.25.2", features = ["tokio-comp", "tokio-rustls-comp", "aio"] }
redis-derive = "0.1.7"
serde = "1.0.197"
serde_json = "1.0.115"
surrealdb = "1.5.2"
surrealdb-migrations = "1.5.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
